--- a/View/HomeScreen/home_screen.kv
+++ b/View/HomeScreen/home_screen.kv
@@ -16,22 +16,15 @@
 
         MiddleBoxV:
 
-            MDLabel:
+            SubHeaderLabel:
                 text: "Kategorija:"
-                # color: 
-                font_size: 64
-                bold: True
-                halign: 'center'
-                valign: 'bottom'
+                pos_hint: {'center_x': 0.5, 'center_y': 0.9}
 
-            MDLabel:
+            TextLabel:
                 id: home_category_label
                 text: "Random"
-                # color: 
-                font_size: 48
-                bold: True
-                halign: 'center'
-                valign: 'top'
+                font_size: 32
+                pos_hint: {'center_x': 0.5, 'center_y': 0.1}
             
         BottomBoxV:
 
