--- a/View/TeamCreationScreen/team_creation_screen.kv
+++ b/View/TeamCreationScreen/team_creation_screen.kv
@@ -47,13 +47,9 @@
                 spacing: "8dp"
                 # md_bg_color: 
 
-                MDLabel:
-                    size_hint_y: 0.1
+                SubHeaderLabel:
                     text: "Komandas:"
-                    font_size: 32
-                    halign: 'center'
-                    valign: 'center'
-                    bold: True
+                    size_hint_y: 0.1
 
                 MDScrollView:
                     always_overscroll: False
