* Update design * Update game screen exit logic

--- a/View/GameResultsScreen/game_results_screen.kv
+++ b/View/GameResultsScreen/game_results_screen.kv
@@ -5,11 +5,24 @@
 
     MainBox:
 
-        TopBoxV:
+        TopBoxMainH:
 
-            HeaderLabel:
-                id: header_label
-                text: "Spēles rezultāti"
+            TopBoxSideV:
+            
+            TopBoxMiddleV:
+
+                HeaderLabel:
+                    id: header_label
+                    text: "Spēles rezultāti"
+
+                SubHeaderLabel:
+                    text: ""
+
+                TextLabel:
+                    text: ""
+                    font_size: 40
+            
+            TopBoxSideV:
 
         MiddleBoxV:
 
