--- a/View/HomeScreen/home_screen.kv
+++ b/View/HomeScreen/home_screen.kv
@@ -5,11 +5,9 @@
 
     MainBox:
         
-        TopBoxV:
+        TopBoxMainH:
 
-        MDBoxLayout:
-            size_hint_y: 0.75
-            orientation: 'vertical'
+        MiddleBoxV:
 
             Image:
                 source: 'assets/images/app_title.gif'
